# sereno-engine

./: README.md
native/: .gitignore  CMakeLists.txt
native/inc/: backend.h  decoder.h  library.h  player.h  scanner.h  sereno.h
native/src/: backend.c  decoder.c  library.c  player.c  scanner.c  sereno.c
native/src/platform/: scanner_windows.c  scanner_windows.nhr
native/tests/: cli.c
